<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_dimensions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.justinwise.mazegenerator.EditDimensionsActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="50dp">
            <TextView
                android:id="@+id/rowText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginBottom="20dp"/>
            <Custom.VerticalSeekBar
                android:id="@+id/rowBar"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:max="99"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rows"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="50dp">
            <TextView
                android:id="@+id/colText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginBottom="20dp"/>
            <Custom.VerticalSeekBar
                android:id="@+id/colBar"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:max="69"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cols"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">
            <RadioButton
                android:id="@+id/lockButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lock"
                android:textColor="@color/white"
                android:layout_marginRight="50dp"
                android:textSize="25sp"/>
        </RadioGroup>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"/>

    </LinearLayout>

</LinearLayout>
