<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_color_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.justinwise.mazegenerator.ColorPickerActivity"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/redText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_fifty_five"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginBottom="20dp"/>
            <Custom.VerticalSeekBar
                android:id="@+id/redBar"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:max="255"
                android:progressTint="@color/red"
                android:thumbTint="@color/red"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp">
            <TextView
                android:id="@+id/greenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_fifty_five"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginBottom="20dp"/>
            <Custom.VerticalSeekBar
                android:id="@+id/greenBar"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:max="255"
                android:progressTint="@color/green"
                android:thumbTint="@color/green"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/blueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_fifty_five"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_marginBottom="20dp"/>
            <Custom.VerticalSeekBar
                android:id="@+id/blueBar"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:max="255"
                android:progressTint="@color/blue"
                android:thumbTint="@color/blue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_marginTop="30dp"/>
</LinearLayout>
